# mojopi

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  privacy_policy.txt  pyproject.toml  terms_of_service.txt
.github/workflows/: run_test.yml
news/: 5f804115.feature.md  7db1e85b.feature.md  8a80ba20.bugfix.md  96917454.bugfix.md  ba0e2d31.bugfix.md  c5b443f2.feature.md  f553768b.bugfix.md
scripts/: README.md  ipojom.py  muse.py
src/mojopi/: __init__.py  admin.py  app.py  conf.toml  models.py  utils.py  views.py
src/mojopi/static/css/: custom.css
src/mojopi/templates/: edit_profile.html  index.html  login.html  navbar.html  profile.html  project.html  project_download.html  project_history.html  project_meta.html  register.html  reset_password.html  search_results.html  settings.html
test/: pypi_asdf.json  read_pypi_json.ipynb
test/unit/: test_models.py  test_utils.py  test_views.py
tests/: flask_restx_model_init_with_dataclass.md
tests/unit/: test_views.py
