
[project]
name = "mojopi"
version = "0.1.0"
description = "Mojo Package Index"
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "flask>=2.3.2",
    "flask-admin>=1.6.1",
    "peewee>=3.16.2",
    "wtf-peewee>=3.0.4",
    "bcrypt>=4.0.1",
    "flask-login>=0.6.2",
    "tomlkit>=0.11.8",
    "readme-renderer[md]>=40.0",
    "resolvelib>=1.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pylint>=2.17.4",
    "black[jupyter]>=23.7.0",
    "ipython>=8.14.0",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "towncrier>=23.6.0",
]

[tool.towncrier]
package = "mojopi"
package_dir = "src"
name = "MojoPI"
directory = "news"
filename = "CHANGELOG.md"