
[project]
name = "mojopi"
version = "0.2.1"
description = "Mojo Package Index"
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "flask>=2.3.2",
    "flask-admin>=1.6.1",
    "peewee>=3.16.2",
    "wtf-peewee>=3.0.4",
    "bcrypt>=4.0.1",
    "flask-login>=0.6.2",
    "tomlkit>=0.11.8",
    "readme-renderer[md]>=40.0",
    "resolvelib>=1.0.1",
    "flask-restx>=1.1.0",
    "jsonschema==4.17.3",  # https://github.com/python-restx/flask-restx/issues/553
    "mups @ git+ssh://git@github.com/drunkwcodes/mups.git",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pylint>=2.17.4",
    "black[jupyter]>=23.7.0",
    "ipython>=8.14.0",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "towncrier>=23.6.0",
    "coverage>=7.2.7",
    "ruff>=0.0.282",
]

[tool.towncrier]
package = "mojopi"
package_dir = "src"
name = "MojoPI"
directory = "news"
filename = "CHANGELOG.md"

[tool.ruff]
ignore = ["E712", "F401", "E501", "F403", "F405"]

# E712 [*] Comparison to `True` should be `cond is True` or `if cond:`
# F401 [*] `.core.is_valid_name` imported but unused
# E501 Line too long (442 > 88 characters)
# F403 `from peewee import *` used; unable to detect undefined names
# F405 `Model` may be undefined, or defined from star imports